Fix css to avoid horizontal scroll bars. Remove mockup data for index todo_lists controller action. Close TODO for new and create actions to deal with flash messages and to add frontend logic for adding new todo items in the form.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,10 @@
  *= require_self
  */
 
-html, body {
+body {
   margin: 0;
+  box-sizing: border-box;
+  padding: 5px;
   width: 100%;
   height: 100%;
 
